# aidu-ai-director

./: .gitignore  Makefile  README.md  monitor.py  pyproject.toml  student_archetypes.json
demo/: README.md  package-lock.json  package.json
demo/src/: App.jsx
examples/: actors.py  tutoring.py
src/aidu/ai/director/: config.py  director.py  serve.py
src/aidu/ai/director/actors/: __init__.py  chem_student_actor.py  gui_chem_tutor_actor.py  gui_user_actor.py  test_knowledge_actor.py
src/aidu/ai/director/directors/: dummy_director.py  gui_chem_tutor_director.py  gui_dummy_director.py  math_student_director.py  math_tutor_director.py
tests/: test_chem_assessment_progress.py  test_chem_student_actor.py  test_director_call.py  test_gui_chem_tutor_actor.py  test_test_knowledge_actor.py
web/: README.md  index.html  tailwind.config.js  vite.config.js
web/src/: App.jsx  index.css  main.jsx
