[project]
name = "aidu-ai-director"
version = "0.1.0"
description = "Workflow orchestration for the AIDu ecosystem."
readme = "README.md"
requires-python = ">=3.11,<3.15"

dependencies = [
    "aidu-support",
    "aidu-ai-actor",
    "aidu-ai-llm",
    "pydantic>=2.0",
    "rich>=14.3.2",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pluggy>=1.0",
    "ruff",
    "black",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aidu"]

[tool.uv.sources]
aidu-ai-actor = { path = "../aidu-ai-actor", editable = true }
aidu-ai-controller = { path = "../aidu-ai-controller", editable = true }
aidu-support = { path = "../aidu-support", editable = true }

[tool.ruff]
line-length = 180
exclude = ["__pycache__", "build", "dist", ".venv"]

[tool.black]
line-length = 180
target-version = ["py311"]